feat: removed security context, harcoded db url for local development, fixed routing and added detailed logging
